-----
0.16: 21 May 2013
    - Default behaviour from pherkin is to supress colours when outputting
        to not a tty; thanks (for this, and much of the stuff in 0.15) to
        rjp: https://github.com/sheriff/test-bdd-cucumber-perl/pull/11
0.15: 21 May 2013
    - pherkin now accepts an output type via -o, eg:
        pherkin -o TestBuilder ; pherkin -o TermColor
      This is a partial solution to:
        https://github.com/sheriff/test-bdd-cucumber-perl/issues/8
    - Use the original verb that the test file used
      https://github.com/sheriff/test-bdd-cucumber-perl/issues/9
0.14: 04 May 2013
    - Actually apply the Test::Builder 1.5 stuff
0.13: 04 May 2013
    - Command-line options for pherkin thanks to cursork
    - Reintroduced the "auto_corpus" tests, and made them work
0.12: 17 Nov 2012
    - Fixed tag-related issues, thanks to Craig Caroon
      https://github.com/sheriff/test-bdd-cucumber-perl/issues/5
0.11: 20 May 2012
    - Correct Term::ANSIColor dependency
      https://github.com/sheriff/test-bdd-cucumber-perl/issues/4
0.10: 02 May 2012
    - Changed dependency from Clone::Fast to Clone, because the following
      bug stopped it being installed without a force...
      https://rt.cpan.org/Public/Bug/Display.html?id=65485
0.09: 28 Apr 2012
    - Fixed a few spelling mistakes
    - Added a minimal man page to pherkin
    - Both as reported by intrigeri@boum.org
0.08: 23 Apr 2012
    - Removed some OmniOutliner artifacts. Ooops.
    - Fixed a spelling mistake
    - Both as reported by intrigeri@boum.org
0.07: 01 Apr 2012
    - Started migration away from Ouch
    - Added tags at a code-level (but not to pherkin, yet)
0.06: 31 Mar 2012
    - Fixed up the behaviour of Background sections, to run before each and
      every Scenario. See: https://github.com/sheriff/test-bdd-cucumber-perl/issues/3
      Bug reported by: intrigeri@boum.org
    - `pherkin` now returns a non-zero exit code if tests failed, as per: