@@ -3,6 +3,8 @@
     - Default behaviour from pherkin is to supress colours when outputting
         to not a tty; thanks (for this, and much of the stuff in 0.15) to
         rjp: https://github.com/sheriff/test-bdd-cucumber-perl/pull/11
+    - Try and use Win32::Console::ANSI if on Windows
+        https://github.com/sheriff/test-bdd-cucumber-perl/issues/13
 0.15: 21 May 2013
     - pherkin now accepts an output type via -o, eg:
         pherkin -o TestBuilder ; pherkin -o TermColor
